--- a/index.html
+++ b/index.html
@@ -305,12 +305,19 @@
                 <h3 style="margin-bottom:16px">Signup for Newsletter</h3>
                 <div class="udertext">Receive exclusive offerings. Privacy Guaranteed</div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-bottom:28px;">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <!-- Begin MailChimp Signup Form -->
                     <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=703be6ffe3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="subscribeForm" novalidate>
-                        <input type="email" value="" name="EMAIL" class="required email subInput" placeholder="Enter your Email" id="mce-EMAIL">
-                        <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe " class="button subBtn ">
+                        <div calss="row">
+                            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                                <input type="email" value="" name="EMAIL" class="required email subInput" placeholder="Enter your Email" id="mce-EMAIL">
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe " class="button subBtn ">
+                            </div>
+                        </div>
+
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
                             <div class="response" id="mce-success-response" style="display:none"></div>
@@ -409,7 +416,7 @@
             width: 1352,
             height: 520,
             loop: true,
-            autoplay: true,
+            //autoplay: true,
 
         });
         slider.control('bullets', {
