--- a/thepraise.html
+++ b/thepraise.html
@@ -57,77 +57,85 @@
         </div><!-- /.container-fluid -->
     </nav>
     <section id="doubleslider">
-        <div id="ginkoslider1" class="ginkoslider border-right rigth-2">
-            <div class="g-slide border-right">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding:0">
+                    <div id="ginkoslider1" class="ginkoslider border-right rigth-2">
+                        <div class="g-slide border-right">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-right">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-right">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-right">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-right">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="g-slide border-right">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-right">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-right">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-right">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-        </div>
-        <div id="ginkoslider2" class="ginkoslider left-2">
-            <div class="g-slide border-left">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-left">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-left">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-left">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
-                </div>
-            </div>
-            <div class="g-slide border-left">
-                <div class="verticalAligne">
-                    <div class="praTitle">Franz Hirtzberger</div>
-                    <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
-                    <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 " style="padding:0">
+                    <div id="ginkoslider2" class="ginkoslider left-2">
+                        <div class="g-slide border-left">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-left">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-left">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-left">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                        <div class="g-slide border-left">
+                            <div class="verticalAligne">
+                                <div class="praTitle">Franz Hirtzberger</div>
+                                <div class="praPersonetitle">Chairman of «Vinea Wachau»</div>
+                                <div class="praTestemon w-85">“Great wines develop even better in  the  new  Denk`Art  glass —  a  great  enrichment  for  the  entire glass- and wine-world!” </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -264,6 +272,7 @@
             </div>
         </div>
     </footer>
+
 
 
 
