--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <!-- Begin MailChimp Signup Form -->
                     <div id="mc_embed_signup">
-                        <div>Phone No: 010-65683631</div>
+                        <div class="phoneNomber">Phone No: <span>010-65683631</span></div>
                         <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=537cff3299" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
                                 <div class="row">
@@ -125,28 +125,32 @@
                                     <input type="text" value="" name="ADR" class=" placeholderimit" id="mce-ADR">
                                     <label for="mce-ADR" class="placeholderobj">Address </label>
                                 </div>
-                                <div class="mc-field-group input-group">
-                                    <ul>
-                                        <li><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></li>
-                                        <li><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></li>
-                                        <li><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></li>
-                                    </ul>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" name="CITYNAME" class=" placeholderimit" id="mce-CITYNAME">
-                                    <label for="mce-CITYNAME" class="placeholderobj">Name of City </label>
+                                <div class="row">
+                                    <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                                        <div class="mc-field-group input-group">
+                                            <div class="row no-paddings">
+                                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="padding-left:10px"><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="padding-left:10px"><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></div>
+                                                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                                        <div class="mc-field-group">
+                                            <input type="text" value="" name="CITYNAME" class=" placeholderimit" id="mce-CITYNAME">
+                                            <label for="mce-CITYNAME" class="placeholderobj">Name of City </label>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="mc-field-group">
                                     <input type="text" value="" name="WEBS" class="placeholderimit" id="mce-WEBS">
                                     <label for="mce-WEBS" class="placeholderobj">Website </label>
                                 </div>
                                 <div class="mc-field-group input-group">
-                                    <ul>
-                                        <li><input type="checkbox" value="8" name="group[20041][8]" id="mce-group[20041]-20041-0"><label for="mce-group[20041]-20041-0">Subscribe to Newsletter</label></li>
-                                    </ul>
+                                    <input type="checkbox" value="8" name="group[20041][8]" id="mce-group[20041]-20041-0"><label for="mce-group[20041]-20041-0" style="top:-6px;">Subscribe to Newsletter</label>
                                 </div>
                                 <div class="mc-field-group">
-                                    <input type="text" value="" name="ENQ" class="placeholderimit" id="mce-ENQ">
+                                    <input type="text" value="" style="height:147px;" name="ENQ" class="placeholderimit" id="mce-ENQ">
                                     <label for="mce-ENQ" class="placeholderobj">Enquiry </label>
                                 </div>
                                 <div id="mce-responses" class="clear">
@@ -189,6 +193,7 @@
             </div>
         </div>
     </footer>
+
     <!-- Bootstrap core JS -->
     <script src="javascripts/jquery-1.11.3.min.js"></script>
     <script src="javascripts/jquery-migrate-1.2.1.min.js"></script>
