--- a/thebrand.html
+++ b/thebrand.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
     <section id="brandSec">
-        <div class="container">
+        <div class="container no-pad">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="infoblock">
@@ -292,6 +292,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Bootstrap core JS-------->
     <script src="javascripts/jquery-1.11.3.min.js"></script>
