--- a/contact.html
+++ b/contact.html
@@ -128,10 +128,10 @@
                                 <div class="row">
                                     <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                                         <div class="mc-field-group input-group">
-                                            <div class="row no-paddings">
-                                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="padding-left:10px"><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></div>
-                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="padding-left:10px"><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></div>
-                                                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></div>
+                                            <div class="row">
+                                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></div>
+                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></div>
+                                                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings"><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></div>
                                             </div>
                                         </div>
                                     </div>
@@ -158,7 +158,7 @@
                                     <div class="response" id="mce-success-response" style="display:none"></div>
                                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_537cff3299" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn"></div>
+                                <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
                             </div>
                         </form>
                     </div>
